--- a/TouristAtrraction/index.html
+++ b/TouristAtrraction/index.html
@@ -63,7 +63,7 @@
         var imgAtual = 1;
         var imgs = ["url('images/ilhaporchat.jpg')", 
         "url('images/orladapraia.jpg')", 
-        "url('images/pontepensil.jpg')", 
+        "url('images/pontepensil.JPG')", 
         "url('images/vila.jpg')", 
         "url('images/teleferico.jpg')"];
         var dropdown = document.getElementById('dropdown');        
